--- a/Acwing/Daily/进阶课打卡/图论.md
+++ b/Acwing/Daily/进阶课打卡/图论.md
@@ -2581,5 +2581,390 @@ int main()
 
 ## Floyd算法
 
+​	floyd用于处于任意两个点的最小值问题
 
+
+
+### 牛的旅行
+
+**题目**
+
+> 农民John的农场里有很多牧区，有的路径连接一些特定的牧区。
+> 一片连通的牧区称为一个牧场。
+> 但John的农场却不只有一个牧场->它有好几个连通块。
+> John现在想在农场里添加一条路径（注意，恰好一条）。
+> 一个牧场的直径就是牧场中最远的两个牧区的距离（本题中所提到的所有距离指的都是最短的距离）
+>
+> John将会在两个牧场中各选一个牧区，然后用一条路径连起来，使得连通后这个新的更大的牧场有最小的直径。
+> 现在请你编程找出一条连接两个不同牧场的路径，使得连上这条路径后，所有牧场（生成的新牧场和原有牧场）中直径最大的牧场的直径尽可能小。
+> 输出这个直径最小可能值。
+>
+> 它给了你每个牧区的坐标，和一个临界矩阵，临界矩阵用01表示哪两个牧区相连。
+>
+> N<150
+
+
+
+#### 思路
+
+​	首先本题只给了你坐标,所以你要自己算出两个牧区之间的距离(相连的话)。然后你要先用Floyd算出一个牧场之间每个点的距离，算出现有牧区的直径(也就是最远两个点的距离)，再在没有连边的任意两个点之间连一条边，算出这种情况下的新牧场直径，直径取最小值
+
+
+
+##### 代码
+
+```c++
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+#include <cmath>
+
+#define x first
+#define y second
+
+using namespace std;
+
+typedef pair<double, double> pii;
+
+const int N = 155;
+const double INF = 1e20;
+
+int n;
+pii q[N];
+double d[N][N];
+double maxd[N];
+char g[N][N];
+
+double get_dist(pii a, pii b)
+{
+   double dx = a.x - b.x;
+   double dy = a.y - b.y;
+   return sqrt(dx * dx + dy * dy);
+}
+
+int main()
+{
+   cin >> n;
+   for (int i = 0; i < n; i++)
+      cin >> q[i].x >> q[i].y;
+   for (int i = 0; i < n; i++)
+      cin >> g[i];
+
+   for (int i = 0; i < n; i++)
+      for (int j = 0; j < n; j++)
+         if (i == j)
+            d[i][j] = 0;
+         else if (g[i][j] == '1')
+            d[i][j] = get_dist(q[i], q[j]);
+         else
+            d[i][j] = INF;
+
+   for (int k = 0; k < n; k++)
+      for (int i = 0; i < n; i++)
+         for (int j = 0; j < n; j++)
+            d[i][j] = min(d[i][j], d[i][k] + d[k][j]);
+
+   double r1 = 0;
+   for (int i = 0; i < n; i++)
+   {
+      for (int j = 0; j < n; j++)
+         if (d[i][j] < INF)
+            maxd[i] = max(maxd[i], d[i][j]);
+      r1 = max(r1, maxd[i]);
+   }
+
+   double r2 = INF;
+   for (int i = 0; i < n; i++)
+      for (int j = 0; j < n; j++)
+         if (d[i][j] >= INF )
+            r2 = min(r2, maxd[i] + maxd[j] + get_dist(q[i], q[j]));
+
+   printf("%.6lf\n", max(r1, r2));
+
+   return 0;
+}
+
+```
+
+
+
+
+
+
+
+### 排序
+
+**题目**
+
+> ​	给定 n 个变量和 m 个不等式。其中 n 小于等于 26，变量分别用前 n 的大写英文字母表示。
+> ​	不等式之间具有传递性，即若 A>B 且 B>C，则 A>C。
+> ​	请从前往后遍历每对关系，每次遍历时判断：
+>
+> - 如果能够确定全部关系且无矛盾，则结束循环，输出确定的次序；
+> - 如果发生矛盾，则结束循环，输出有矛盾；
+> - 如果循环结束时没有发生上述两种情况，则输出无定解。
+>
+> 输入包含多组测试数据。
+>
+> ​	每组测试数据，第一行包含两个整数 n 和 m。
+> ​	接下来 m 行，每行包含一个不等式，不等式全部为小于关系。
+> ​	当输入一行 `0 0` 时，表示输入终止。
+> ​	每组数据输出一个占一行的结果。
+> ​	结果可能为下列三种之一：
+>
+> 1. 如果可以确定两两之间的关系，则输出`"Sorted sequence determined after t relations: yyy...y."`,其中`'t'`指迭代次数，`'yyy...y'`是指升序排列的所有变量。
+>
+> 2. 如果有矛盾，则输出： `"Inconsistency found after t relations."`，其中`'t'`指迭代次数。
+>
+> 3. 如果没有矛盾，且不能确定两两之间的关系，则输出 `"Sorted sequence cannot be determined."`。
+>
+>    
+
+
+
+​	首先什么是迭代次数？？
+就是那 m 组关系中，到第几组关系，能够出现那三种情况中的一种！	
+
+#### 思路
+
+
+
+​	乍一看比较新颖的一题，没想到居然能用图论来解233333，而且是用Floyd。感觉Floyd在本题的作用就是用来判断任意两点间有没有确立关系的。
+
+​	这道题就是看这 m 组关系能否确定每个点的位置。就相当于，给出 m 组关系，每个关系是 A 的成绩高于 B 的成绩，问最终能否确定班级排名？
+
+​	1、首先我们要知道如何判断一个人的名次是否确定了呢？
+​	就是 比他成绩好的人数 + 没他成绩好的人数总和 = 总人数（除自己），所以我们每次加入一条关系，就可以进行判断，遍历n个人，看看是不是每个人都已经确立了位置。
+
+​	2、根据这几组关系，如何判断一个人是否比另一个人的成绩好呢？
+​	这就体现出 floyd 算法的另外一个用途：**判断两点之间是否可以到达！**
+​	每加入一组关系就跑一遍 floyd（其实，只用这新加入的两个点作为中转点更新其他点就可以，不用像之前k一样从1-n。见`#`），如果两点之间的距离不是正无穷，就说明两点之间可达，也就是说：dist[x]\[y]!= INF 说明 x 比 y 的成绩好。
+​	如此，对于一个点，遍历其余所有点就可以得到：比该点成绩好的点数 和 比该点成绩差的点数。
+
+​	3、如何判断出现了矛盾呢？
+​	如果发现：从 x 能到达 y 并且从 y 也能到达 x（即，x 比 y 成绩好并且 y 比 x 成绩好），那就是出现矛盾了。
+
+​	`#`：当图中只有一条边的权值变小时，没有必要跑完整的 floyd，只需要用这条边的两个端点分别作为中转点来更新其他点就行了。因为其他边没变，用其他点作为中转点不会有任何更新。
+此外，需要注意只有边权变小时才能只用两个端点更新；如果边权变大了，需要重新初始化 dist，跑完整 floyd。因为边权变大了，之前用小边权更新的其他点不会因为这个变大的边来更新其值了。而边权变小的话，其他点会用这个小边权来更新。
+
+​	
+
+
+#### 代码
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int INF = 0x3f3f3f3f;
+const int N = 30;
+int dis[N][N];
+int n;
+pair<int, int> ans[N];//ans存储答案，第一维存该点能到哪些点，第二维存这个点的编号，我们按照第一维排序，它能到的点越多代表它大于的点就越多，它的权值就越大
+
+void floyd(int x) //以 x 为中转点，更新其他点。
+{
+     for (int i = 1; i <= n; i++)
+          for (int j = 1; j <= n; j++)
+               dis[i][j] = min(dis[i][j], dis[i][x] + dis[x][j]);
+}
+
+int cnt = 0;
+int judge()
+{
+     for (int i = 1; i <= n; i++)
+     {
+          int cnt = 0;
+          for (int j = 1; j <= n; j++)
+               if (dis[i][j] != INF)
+                    cnt++; //当前点能到达的点数
+          ans[i] = {cnt, i};
+          for (int j = 1; j <= n; j++)
+               if (i != j && dis[j][i] != INF)
+                    cnt++; //能到达当前点的点数
+          if (cnt != n)
+               return 0;
+     }
+     sort(ans + 1, ans + n + 1);
+     return 1;
+}
+
+int main()
+{
+     int m;
+     while (cin >> n >> m && n)
+     {
+          int f = 0;
+
+          for (int i = 1; i <= n; i++)
+               for (int j = 1; j <= n; j++)
+               {
+                    if (i == j)
+                         dis[i][j] = 0;
+                    else
+                         dis[i][j] = INF;
+               }
+          memset(ans, 0, sizeof ans);
+
+          for (int i = 1; i <= m; i++)
+          {
+               char a, b, c;
+               cin >> a >> b >> c;
+               int x = a - 'A' + 1, y = c - 'A' + 1;
+               
+               if (!f && dis[x][y] != INF) //发现已经从x能到y，出现矛盾
+               {
+                    printf("Inconsistency found after %d relations.\n", i);
+                    f = 1;
+               }
+
+               dis[y][x] = 1;
+               floyd(x), floyd(y); //分别以 x 和 y 为中转点更新其他点
+
+               if (!f && judge())
+               { //发现所有点都已确定
+                    printf("Sorted sequence determined after %d relations: ", i);
+                    for (int i = 1; i <= n; i++)
+                         cout << char(ans[i].second + 'A' - 1);
+                    printf(".\n");
+                    f = 1;
+               }
+              
+          }
+          if (!f)
+               printf("Sorted sequence cannot be determined.\n"); //无法确定
+     }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+### 观光之旅
+
+
+
+**题目：**
+
+> 给定一张无向图，求图中一个至少包含 3 个点的环，环上的节点不重复，并且环上的边的长度之和最小。
+>
+> 该问题称为无向图的最小环问题。
+>
+> 你需要输出最小环的方案，若最小环不唯一，输出任意一个均可。
+>
+> 
+>
+> 第一行包含两个整数 N 和 M，表示无向图有 N 个点，M 条边。
+> 接下来 M 行，每行包含三个整数 u，v，l，表示点 u 和点 v 之间有一条边，边长为 。
+>
+> 输出占一行，包含最小环的所有节点（按顺序输出），如果不存在则输出 `No solution.`。
+>
+> 1≤N≤100,1≤M≤10000,1≤l<500
+
+
+
+#### 思路
+
+​	Floyd求最小环问题。
+
+​	Floyd:遍历中转点不断更新d[i]\[j]=min(d[i]\[k]+d[k]\[j],d[i]\[j])，在遍历k的时候，求出一个个的环，要是比上一个环的环长小的话，就放入dfs里面，存储这个环上的点
+
+​	感觉还是可以看一下y总视频
+
+
+
+code:
+
+```c++
+#include<bits/stdc++.h>
+using namespace std;
+
+const int N = 110, INF = 0x3f3f3f3f;
+
+int n, m;
+int d[N][N], g[N][N]; // d[i][j] 是不经过点
+int pos[N][N];        // pos存的是中间点k
+int path[N], cnt;     // path 当前最小环的方案, cnt环里面的点的数量
+
+// 递归处理环上节点
+void get_path(int i, int j)
+{
+     if (pos[i][j] == 0)
+          return; // i到j的最短路没有经过其他节点
+
+     int k = pos[i][j]; // 否则,i ~ k ~ j的话,递归处理 i ~ k的部分和k ~ j的部分
+     get_path(i, k);
+     path[cnt++] = k; // k点放进去
+     get_path(k, j);
+}
+
+int main()
+{
+     cin >> n >> m;
+
+     memset(g, 0x3f, sizeof g);
+     for (int i = 1; i <= n; i++)
+          g[i][i] = 0;
+
+     while (m--)
+     {
+          int a, b, c;
+          cin >> a >> b >> c;
+          g[a][b] = g[b][a] = min(g[a][b], c);
+     }
+
+     int res = INF;
+     memcpy(d, g, sizeof g);
+     // dp思路, 假设k是环上的最大点, i ~ k ~ j(Floyd的思想)
+     for (int k = 1; k <= n; k++)
+     {
+
+          // 求最小环,
+          for (int i = 1; i < k; i++) // 一个环至少包含三个点，i，j，k不重合。i<j<k
+               for (int j = i + 1; j < k; j++)
+                    // 由于是无向图,
+                    // 直接剪枝, j从i + 1开始就好了
+                    // 更新最小环, 记录一下路径
+                    if ((long long)d[i][j] + g[j][k] + g[k][i] < res)
+                    {
+                         // 注意,每当迭代到这的时候,
+                         // d[i][j]存的是上一轮迭代Floyd得出的结果
+                         // d[i][j] : i ~ j 中间经过不超过k - 1的最短距离(k是不在路径上的)
+                         res = d[i][j] + g[j][k] + g[k][i];
+                         cnt = 0;
+                         path[cnt++] = k; // 先把k放进去
+                         path[cnt++] = i; // 从k走到i(k固定的)
+                         get_path(i, j);  // 递归求i到j的路径
+                         path[cnt++] = j; // j到k, k固定
+                    }
+
+          // Floyd, 更新一下所有ij经过k的最短路径
+          for (int i = 1; i <= n; i++)
+               for (int j = 1; j <= n; j++)
+                    if (d[i][j] > d[i][k] + d[k][j])
+                    {
+                         d[i][j] = d[i][k] + d[k][j];
+                         pos[i][j] = k;
+                    }
+     }
+
+     if (res == INF)
+          puts("No solution.");
+     else
+     {
+          for (int i = 0; i < cnt; i++)
+               cout << path[i] << ' ';
+          cout << endl;
+     }
+
+     return 0;
+}
+
+```
 
