--- a/CodeForece/812 Div2.md
+++ b/CodeForece/812 Div2.md
@@ -55,7 +55,7 @@ int main()
 
 **思路**
 
-​	要想知道此事，就必须要使得所有的操作都能作用在序列最大值身上(我们通过对a进行升序排序,一定能实现这种想法)
+​	要想知道题目所给序列是不是已经是f值最小，就必须要使得所有的操作都能作用在序列最大值身上(我们通过对a进行升序排序,一定能实现这种想法)
 
 
 
