--- a/CodeForece/812 Div2--.md
+++ b/CodeForece/812 Div2--.md
@@ -51,11 +51,74 @@ int main()
 
 ​	给定一个数组a，可以进行以下操作：选择区间，然后使得区间中所有数减少1。设f(a)是让a变成0的最下操作数。问a是不是a的所有排列中f值最小的。
 
+​	1≤n≤10^5^
+
 
 
 **思路**
 
-​	要想知道题目所给序列是不是已经是f值最小，就必须要使得所有的操作都能作用在序列最大值身上(我们通过对a进行升序排序,一定能实现这种想法)
+​	要想知道题目所给序列是不是已经是f值最小，就要判断此序列能否满足这个条件：我们对序列的每一次操作都能作用在序列中最大值身上(f值最小的序列一定是满足这种想法)
+
+​	判断是否满足条件 <=> **最大值左边满足序列递增，右边满足序列递减**。
+
+​	可以自己根据题目样例动手试一下：
+
+> ```
+> 4
+> 2 3 5 4
+> Yes
+> 3
+> 1 2 3
+> Yes
+> 4
+> 3 1 3 2
+> No
+> ```
+
+
+
+**code**
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 1e5 + 5;
+#define long long int
+void solve()
+{
+     int n;
+     cin >> n;
+     vector<int> a(n);
+     for (int i = 0; i < n; i++)
+          cin >> a[i];
+     bool flag = false;
+     for (int i = 1; i < n; i++)
+     {
+          if (flag)
+          {
+               if (a[i] > a[i - 1])
+               {
+                    cout << "NO\n";
+                    return;
+               }
+          }
+
+          if (a[i] < a[i - 1])
+               flag = true;
+     }
+
+     cout << "YES\n";
+}
+signed main()
+{
+     int t;
+     cin >> t;
+     while (t--)
+     {
+          solve();
+     }
+}
+```
 
 
 
@@ -129,3 +192,10 @@ signed main()
 }
 ```
 
+
+
+
+
+
+
+## D
