--- a/CodeForece/819 Div1+2.md
+++ b/CodeForece/819 Div1+2.md
@@ -1,12 +1,16 @@
+https://codeforces.com/contest/1726
+
+
+
 ## A
 
+**题意**
 
-
-
+​	给定一个长度为n得数组a，只对数组进行一次操作：选择其中一个子数组，对该子数组进行任意次如下操作：`al=al+1,al+1=al+2,…,ar−1=ar,ar=al` 。问a[n] - a[1]的最大值。
 
 **思路**
 
-有三种情况：
+只有三种情况可能产生最大值，我们每个都讨论一遍，取他们的最大值就可以了：
 	第一种，将最小的数翻转到第一位，然后用原来的a[n]减去反转后的a[1]。
 	第二种，将最大的数翻转到最后一位，用反转后的a[n]减去原来的a[1]。
 	第三种，整体翻转，使最大和最小两个数在a[n]和a[1]的位置，这就需要他们相邻。
@@ -14,4 +18,194 @@
 
 
 **code**
+
+```c++
+void solve()
+{
+     int n;
+     cin >> n;
+     vector<int> a(n);
+     cin >> a;
+
+     int b = a.back() - a[0];
+     for (int i = 0; i < n - 1; i++)
+     {
+          b = max(b, a[i] - a[i + 1]);
+          b = max(b, a[n - 1] - a[i]);
+          b = max(b, a[i + 1] - a[0]);
+     }
+
+     cout << b << "\n";
+}
+```
+
+
+
+
+
+
+
+## B
+
+**题意**
+
+​	给定两个数n, m，构造一个长度为n的正整数数组a，使得对任意一个a[i]，数组中严格小于a[i]的数的异或起来都为0，并且a中数字的和为m。
+
+
+
+**思路**
+
+> 样例：
+> 4
+> 1 3
+> 6 12
+> 2 1
+> 3 6
+>
+> Yes
+> 3
+> Yes
+> 1 3 2 2 3 1
+> No
+> Yes
+> 2 2 2	
+
+​	分情况构造,可以看样例或者草稿本找找想法。
+
+- m < n无解
+
+- m % n == 0，全都是m / n即可
+
+- 其他情况，我们发现，除了最大的数，其他数出现一定是偶数次(因为任何数字异或偶数次自己结果一定是为)。
+
+  若n为奇数，则除了最大的数，其他数都为1即可。若n为偶数，说明最大的数也要出现偶数次，所以m一定要为偶数，此时，让n - 2个为1，然后剩余的2个位置平分剩下的即可。
+
+
+
+
+
+**code**
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+
+int main()
+{
+
+     cin.tie(0);
+     cout.tie(0);
+     ios::sync_with_stdio(0);
+
+     int T;
+     cin >> T;
+     while (T--)
+     {
+          int n, m;
+          cin >> n >> m;
+          if (n > m)
+          {
+               cout << "No" << '\n';
+               continue;
+          }
+          if (n % 2 == 0 && m % 2)
+          {
+               cout << "No" << '\n';
+               continue;
+          }
+          cout << "Yes" << '\n';
+          vector<int> ans(n);
+          if (n & 1)
+          {
+               for (int i = 0; i < n - 1; i++)
+                    ans[i] = 1;
+               ans[n - 1] = m - (n - 1);
+          }
+          else
+          {
+               for (int i = 0; i < n - 2; i++)
+                    ans[i] = 1;
+               ans[n - 2] = ans[n - 1] = (m - (n - 2)) / 2;
+          }
+          for (auto x : ans)
+               cout << x << ' ';
+          cout << '\n';
+     }
+}
+
+```
+
+
+
+
+
+## C
+
+### 合法序列
+
+**题意**
+
+​	给出一个合法括号序列,如果他的子段[l~r]也是合法的括号序列,那么直接有一条边相连l点和r点,问最后括号序列生成的图中有多少个连通分量.(可以看一下题目)
+
+
+
+
+
+**思路**
+
+我们回到合法括号序列的定义: 首先空序列一定是合法的括号序列.
+
+​	1：如果A是合法的括号序列,那么(A)也是合法的括号序列.
+
+​	2：如果A，B都是合法的括号序列,那么AB就是合法的括号序列
+
+​	我们发现只出现形如（A）的序列时连通分量才会增加,因为AB这种序列中的开头与的结尾相连,A的开头又与B的结尾相连,所以A,B是连通的不会使连通分量增加.
+
+​	所以我们要做的就是数整个括号序列在生成的过程中有多少次(A)的操作,我们发现这种操作的最后两个字符一定都是`)`,所以这个问题等价于数有多少个连在一起的`)`,每有一个连通分量就会加一.
+
+
+
+**code**
+
+```
+#include<iostream>
+#include<cstring>
+using namespace std;
+using LL = long long;
+
+int main(){
+
+    cin.tie(0);
+    cout.tie(0);
+    ios::sync_with_stdio(0);
+
+    int T;
+    cin >> T;
+    while(T--){
+        int n; string s;
+        cin >> n >> s;
+        int res = 1;
+        for(int i = 0; i < s.size(); i++){
+            if (s[i] == '(') continue;
+            int j = i;
+            while(j + 1 < s.size() && s[j + 1] == ')') j++;
+            res += j - i;
+            i = j;
+        }
+        cout << res << '\n';
+    }
+
+}
+
+```
+
+
+
+
+
+
+
+## D
+
+
 
