--- a/CodeForece/821 Div2.md
+++ b/CodeForece/821 Div2.md
@@ -293,11 +293,13 @@ int main()
 
 **思路**
 
+​	**区间dp！**
+
 ​	x>=y的时候和D1写法一样，我们重点考虑x<y的情况，可以采用区间dp的写法。
 
 ​	容易发现，相距越远的两个数，用x的花费越大，而用y的花费不变；因此如果我们要用y，就会选择最远的两个数用
 
-​	用dp[i]\[j]表示解决第i个不同的点到第j个不同的点所需的最小花费，接着我们考虑dp[i]\[j]从什么地方转移过来
+​	用dp[i]\[j]表示解决 第i个不同的点到第j个不同的点 所需的最小花费 (不同指的是这个位置a串和b串不同) ，接着我们考虑dp[i]\[j]从什么地方转移过来
 
 可以发现，每次操作只有三种情况
 
