--- a/CodeForece/EC 135.md
+++ b/CodeForece/EC 135.md
@@ -4,3 +4,8 @@ https://codeforces.com/contest/1728
 
 
 
+## A
+
+**题意:**
+
+​	有一个袋子，里面有彩色的球。袋子里有n种不同颜色的球，编号从1到n。袋子里的球总数是奇数（例如：cnt1+cnt2+⋯+cntn是奇数）。在一次行动中，你可以选择两个不同颜色的球，并把它们从袋子里拿出来。在某些时候，袋子里剩下的所有球都会有相同的颜色。这时你就不能再做动作了。
