--- a/CodeForece/822 Div2.md
+++ b/CodeForece/822 Div2.md
@@ -90,3 +90,150 @@ int main()
 }
 ```
 
+
+
+
+
+## C
+
+**题意**
+
+​	给定一个1~n的集合，要求删掉一部分的数使得S集合变成T集合(T集合也已知,并且是S集合的子集)。一次操作:可以选择一个数k,删除集合内k的最小倍数，代价是k。求进行若干次操作，用最小的代价使得S集合变成T集合，输出代价。
+
+
+
+**思路:**
+
+​	**贪心思维题**
+
+​	为了使花费最小，我们从小到大遍历k,删掉k,2k,3k….直到碰到T中的元素，停止删除操作，k++,循环刚才操作。
+
+​	对于某个因子f,在1~n中的倍数有个n/f个。此题的时间复杂度为:**O(nlogn)**
+
+​	<!--之前因为不了解这题的时间复杂度，一直被卡着……-->
+
+
+
+**code**
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 1e6 + 10;
+#define int long long
+signed main()
+{
+     ios::sync_with_stdio(0), cin.tie(0);
+     int t;
+     cin >> t;
+     while (t--)
+     {
+          int n;
+          cin >> n;
+          string s;
+          cin >> s;
+          int sum = 0;
+
+          // k从小到大枚举,删除k,2k,3k...,直到碰到不能删的
+          //按着步骤来就可以,不懂这复杂度为什么可以过
+          vector<bool> vis(n + 1);
+          for (int i = 1; i <= n; i++)
+               for (int j = i; j <= n && s[j - 1] == '0'; j += i)
+               {
+                    if (vis[j])
+                         continue;
+                    sum += i;
+                    vis[j] = 1;
+               }
+
+          cout << sum << '\n';
+     }
+}
+```
+
+
+
+
+
+
+
+
+
+## D
+
+### 	**思维+双指针**
+
+**题意:**
+
+​	给你一个数组(可以有负数)和一个起点下标i，保证**权值始终大于等于0**的前提下，能否走到数组的边缘。
+
+​	你起初的权值是a[i]，往左走权值变为a[i]+a[i-1]，再往左走a[i]+a[i-1]+a[i-2]，若接下来往右走，权值变为a[i]+a[i-1]+a[i-2]+a[i+1]，问你最终能否从左或右端走出数组
+
+
+
+**思路：**
+
+​	我们的做法：每次都向左向右扩展，记录下这个过程中的最大值。如果朝一个方向扩展不动了(接着走就变负数了)，就直接从之前所走的这段路最大值掉头向另外的方向扩展，不像之前一样继续往前走了。如果左右都扩展不动了，跳出即可。(刚开始向左向右没有影响)
+
+​	代码实现能力很重要，感觉自己写这道题的时候也是这个思路，但感觉可能不一定能把想法描述出来，下面这个代码很妙
+
+
+
+**code**
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int N = 1e6 + 10;
+#define int long long
+
+int a[N];
+signed slove()
+{
+     int n, k;
+     cin >> n >> k;
+     for (int i = 1; i <= n; i++)
+          cin >> a[i];
+
+     int L = k - 1, R = k + 1;
+     int L_now, R_now, L_mx, R_mx;
+     L_now = R_now = L_mx = R_mx = 0;
+
+     while (1 <= L && R <= n)//L,R两个指针
+     {
+          bool flag = 1;
+          while (1 <= L && a[k] + L_now + R_mx + a[L] >= 0)//向左走，+a[L]是判断能不能走出下一步,+R_mx代表从右端的最大值折返回来,a[k]永远是a[k]
+          {
+               flag = 0;
+               L_now += a[L--];
+               L_mx = max(L_mx, L_now);
+          }
+          while (R <= n && a[k] + R_now + L_mx + a[R] >= 0)//向右走
+          {
+               flag = 0;
+               R_now += a[R++];
+               R_mx = max(R_mx, R_now);
+          }
+          if (flag)// 左/右都走不动的情况
+               break;
+     }
+
+     if (L == 0 || R == n + 1)//其中一个指针过了头
+          cout << "YES" << '\n';
+     else
+          cout << "NO" << '\n';
+    
+}
+
+signed main()
+{
+     ios::sync_with_stdio(0), cin.tie(0);
+     int t;
+     cin >> t;
+     while (t--)
+     {
+          slove();
+     }
+}
+```
+
