--- a/Acwing/Blue Bridge/13.md
+++ b/Acwing/Blue Bridge/13.md
@@ -1,10 +1,10 @@
 
 
+[活动 - AcWing](https://www.acwing.com/activity/content/punch_the_clock/19/)
 
 
 
-
-### 统计子矩阵
+## 统计子矩阵
 
 
 
@@ -80,4 +80,14 @@ int main()
 }
 
 ```
+
+
+
+
+
+
+
+## 积木画
+
+
 
